--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       </div>
     </section>
 
-    <section id="concerts" class="py-4">
+<section id="concerts" class="py-4">
       <div class="container text-center">
         <h2>Coming Concerts</h2>
         <div class="row my-3">
@@ -173,11 +173,11 @@
             <div class="merch-card">
               <img
                 class="img-fluid rounded"
-                src="assets/home_eco_blog1-350x350.jpg"
+                src="assets/madrid.png"
                 alt="card-img"
               />
               <h4 class="my-3">Madrid</h4>
-              <p>Fri. 27 November 2015</p>
+              <p>Fri. 27 November 2021</p>
               <button>Buy</button>
             </div>
           </div>
@@ -185,11 +185,11 @@
             <div class="merch-card">
               <img
                 class="img-fluid rounded"
-                src="assets/home_eco_blog1-350x350.jpg"
+                src="assets/barcelona.png"
                 alt="card-img"
               />
               <h4 class="my-3">Barcelona</h4>
-              <p>Sat. 28 November 2015</p>
+              <p>Sat. 4 Diciembre 2021</p>
               <button>Buy</button>
             </div>
           </div>
@@ -197,11 +197,11 @@
             <div class="merch-card">
               <img
                 class="img-fluid rounded"
-                src="assets/home_eco_blog1-350x350.jpg"
+                src="assets/malaga.png"
                 alt="card-img"
               />
-              <h4 class="my-3">San Francisco</h4>
-              <p>Sun. 29 November 2015</p>
+              <h4 class="my-3">Malaga</h4>
+              <p>Sun. 15 Diciembre 2021</p>
               <button>Buy</button>
             </div>
           </div>
