--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="main.css" />
+    <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -121,10 +122,35 @@
           />
         </div>
       </div>
-    </section>
-
+      </section>
+    
     <section id="merch" class="py-4 bg-dark text-light">
       <div class="container text-center">
+          <h2> Streaming Services </h2>
+          <ul class="social-media">
+              <li>
+                <a href="https://open.spotify.com/artist/3ZxaYY2eYNWxg8v1s2k6JD" target="_blank"><i class="fab fa-spotify fa-2x"></i></a>
+              </li>
+              <li>
+                <a href="https://music.apple.com/us/artist/kora/1493175597" target="_blank"><i class="fab fa-apple fa-2x"></i></a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/channel/UCQp5xce5M6J2szTWK7ISbcw" target="_blank"><i class="fab fa-youtube fa-2x"></i></a>
+              </li>
+              <!--<li>
+                <a href="http://tidal.com/browse/artist/23071471" target="_blank"><i class="fab fa-tidal"></i></a>
+              </li>-->
+              <li>
+                <a href="https://deezer.page.link/EfmC6MrtLGSgE3EB7" target="_blank"><i class="fab fa-deezer fa-2x"></i></a>
+              <li>
+                <a href="http://tidal.com/browse/artist/23071471" target="_black"><i class="iconify" data-icon="simple-icons:tidal" style="color: white; font-size: 2em;"></i></a>
+
+              </li>
+          </ul>
+      </div>
+      <hr class="hr3">
+      <div class="container text-center">
+        <br>
         <h2>Merch</h2>
         <small>Se vienen costias...</small>
         <div class="row my-3">
