that's it for today
convince furkan...

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       </div>
       </section>
     
-    <section id="merch" class="py-4 bg-dark text-light">
+    <section id="Streamin Services" class="py-4 text-light" style="background: black;">
       <div class="container text-center">
           <h2> Streaming Services </h2>
           <ul class="social-media">
@@ -142,16 +142,17 @@
               </li>-->
               <li>
                 <a href="https://deezer.page.link/EfmC6MrtLGSgE3EB7" target="_blank"><i class="fab fa-deezer fa-2x"></i></a>
+              </li>
               <li>
                 <a href="http://tidal.com/browse/artist/23071471" target="_black"><i class="iconify" data-icon="simple-icons:tidal" style="color: white; font-size: 2em;"></i></a>
 
               </li>
           </ul>
       </div>
-      <hr class="hr3">
+    </section>
+    <section id = "merch" class="py-4" style="background: linear-gradient(180deg, rgba(0,0,0,1) 10%, rgba(121,121,121,0.5032387955182073) 36%, rgba(255,255,255,1) 100%);">
       <div class="container text-center">
-        <br>
-        <h2>Merch</h2>
+        <h2 >Merch</h2>
         <small>Se vienen costias...</small>
         <div class="row my-3">
           <div class="col-md-4">
@@ -190,8 +191,7 @@
         </div>
       </div>
     </section>
-
-<section id="concerts" class="py-4">
+    <section id="concerts" class="py-4">
       <div class="container text-center">
         <h2>Coming Concerts</h2>
         <div class="row my-3">
@@ -260,6 +260,10 @@
               <li>
                 <a href="https://www.youtube.com/channel/UCQp5xce5M6J2szTWK7ISbcw"target="_blank"><i class="fab fa-youtube"></i></a>
               </li>
+              <li>
+                <a href="https://deezer.page.link/EfmC6MrtLGSgE3EB7" target="_blank"><i class="fab fa-deezer"></i></a>
+              <li>
+                <a href="http://tidal.com/browse/artist/23071471" target="_black"><i class="iconify" data-icon="simple-icons:tidal" style="color: white;"></i></a>
             </ul>
           </div>
         </div>
