final for today
vamos !

--- a/index.html
+++ b/index.html
@@ -152,14 +152,14 @@
     </section>
     <section id = "merch" class="py-4" style="background: linear-gradient(180deg, rgba(0,0,0,1) 10%, rgba(121,121,121,0.5032387955182073) 36%, rgba(255,255,255,1) 100%);">
       <div class="container text-center">
-        <h2 >Merch</h2>
-        <small>Se vienen costias...</small>
+        <h2 style="color:white;">Merch</h2>
+        <small style="color:white;">Se vienen costias...</small>
         <div class="row my-3">
           <div class="col-md-4">
             <div class="merch-card">
               <img
                 class="img-fluid rounded"
-                src="assets/home_eco_blog1-350x350.jpg"
+                src="assets/merch/black1.png"
                 alt="card-img"
               />
               <h4 class="my-3">Black</h4>
@@ -170,7 +170,7 @@
             <div class="merch-card">
               <img
                 class="img-fluid rounded"
-                src="assets/home_eco_blog1-350x350.jpg"
+                src="assets/merch/grey1.png"
                 alt="card-img"
               />
               <h4 class="my-3">Grey</h4>
@@ -181,7 +181,7 @@
             <div class="merch-card">
               <img
                 class="img-fluid rounded"
-                src="assets/home_eco_blog1-350x350.jpg"
+                src="assets/merch/white1.png"
                 alt="card-img"
               />
               <h4 class="my-3">White</h4>
