ups fixed some other stuff
fixed

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <a href="#about" class="scroll-down"
           ><i class="fas fa-arrow-down"></i
         ></a>
-      </div> -->
+      </div>-->
     </header>
 
     <section id="about" class="w-100">
@@ -240,7 +240,7 @@
           <div
             class="col-md-4 d-flex justify-content-center align-items-center"
           >
-            <span class="my-3">© 2021 Copyright Kora <br> <span style="font-size:65%"><a href="crow.html"> by Crow's Tale designst</a></span></span>
+            <span class="my-3">© 2021 Copyright Kora <br> <span style="font-size:85%;"><a href="crows.html"> by Crow's Tale designs</a></span></span>
           </div>
           <div class="col-md-4">
             <ul class="social-media">
