--- a/index.html
+++ b/index.html
@@ -94,12 +94,22 @@
         <div class="col-md-8 py-4 d-flex align-items-center justify-content-center">
           <div class="container">
             <h3>About Kora</h3>
-            <p>
+            <p> 
+            	Kora is one of the most unpredictable and uncategorizable jewels of the new Spanish alternative sound. The 19-year-old Catalan artist reinvents her sound in each song, incorporating elements of jazz, bossa nova, blues, electronica or the most brilliant pop. She controls the entire creative process: composes, arranges, plays, sings, records, mixes, produces and masters.<br>
+				<br>
+				Her anthem "Paciencia", from 01-EP (2019), has continued to catch on with increasingly diverse and numerous audiences, including those in Latin America, and is close to reach 4 million plays on Spotify.<br>
+				<br>
+				After releasing 3 singles in 2020 her second EP, "Renacer Pt. 1" (Spanish Bombs) was released in January 2021. Here we find impecable songs like "Marte", "La Luna" or "+D24". This release won the respect of other national artists like C. Tangana and Alizzz. She was also featured on Radio3 as part of the "Graduación 2021" on the morning show Hoy Empieza Todo.<br>
+				<br>
+				"NEQP", "Como Si Nada" and "Elixir :: Bajo Cielo" are some of the latest releases in her discography and are perfect examples of the wide ranges of her music. NEQP is and electronic anthem of uptempo forms that takes us to a dark context with subtlety. "Como Si Nada" is a moderately slow song with a happy melody and catchy lyrics. Elixir and Bajo Cielo are two juxtaposed songs - happy and sad - that together create a beatiful atmosphere in your ears.<br>
+			</p>
+            <!--<p>
+            	Since her first releases in 2019 she has been gaining a large online audience. 
               Kora es una de las joyas más impredecibles e incatalogables del nuevo sonido alternativo español. La artista catalana de 19 años reinventa su sonido en cada canción incorporando elementos del jazz, la bossa nova, el blues, la electrónica o el pop más brillante. Ella controla todo el proceso creativo: compone, arregla, toca, canta, graba, mezcla, produce y masteriza.<br>
               <br>
               A principios de 2021, confirmó su carácter de artista revelación con la primera entrega de ""Renacer", en la que encontramos canciones inapelables como "Marte" y "La Luna". Mientras tanto, su himno "Paciencia" ha seguido calando entre audiencias cada vez más diversas y numerosas, incluidas las de Latinoamérica, y ya acumula más de tres millones de reproducciones en Spotify. "NEQP" es el nuevo avance de "Renacer", ese primer álbum que Kora ha dividido en dos entregas y cuya segunda parte se publicará a finales de este verano. Un himno electrónico de formas uptempo que nos traslada a un contexto oscuro con sutileza.
             </p>
-            <!-- <iframe
+             <iframe
               class="playlist"
               src="https://open.spotify.com/embed/artist/3ZxaYY2eYNWxg8v1s2k6JD"
               frameborder="0"
@@ -211,8 +221,9 @@
                 alt="card-img"
               />
               <h4 class="my-3">Barcelona</h4>
-              <p>TBA</p>
-              <button>Reserve</button>
+              <h6>Supporting <b>Lori Meyers</b></h2>
+              <p>04. Febrero 2022</p>
+              <button class="btn btn-success" onclick=" window.open('https://www.guitarbcn.com/es/c-3697/LORI-MEYERS','_blank')">Tickets</button>
             </div>
           </div>
           <div class="col-md-4">
@@ -228,6 +239,9 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="container text-center">
+      	<p> Booking: <a href="mailto:carlos.marino@spanishbombs.com">Carlos Marino</a> <p>
       </div>
     </section>
 
