--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				<br>
 				Her anthem "Paciencia", from 01-EP (2019), has continued to catch on with increasingly diverse and numerous audiences, including those in Latin America, and is close to reach 4 million plays on Spotify.<br>
 				<br>
-				After releasing 3 singles in 2020 her second EP, "Renacer Pt. 1" (Spanish Bombs) was released in January 2021. Here we find impecable songs like "Marte", "La Luna" or "+D24". This release won the respect of other national artists like C. Tangana and Alizzz. She was also featured on Radio3 as part of the "Graduación 2021" on the morning show Hoy Empieza Todo.<br>
+				After releasing 3 singles in 2020 her second EP, "Renacer Pt. 1" (Spanish Bombs) was released in January 2021. Here, we find impecable songs like "Marte", "La Luna" or "+D24". This release won the respect of other national artists like C. Tangana and Alizzz. She also became part of the the 2021 "graduation" of the Radio3 show morning show Hoy Empieza Todo with Angel Carmona.<br>
 				<br>
 				"NEQP", "Como Si Nada" and "Elixir :: Bajo Cielo" are some of the latest releases in her discography and are perfect examples of the wide ranges of her music. NEQP is and electronic anthem of uptempo forms that takes us to a dark context with subtlety. "Como Si Nada" is a moderately slow song with a happy melody and catchy lyrics. Elixir and Bajo Cielo are two juxtaposed songs - happy and sad - that together create a beatiful atmosphere in your ears.<br>
 			</p>
