--- a/index.html
+++ b/index.html
@@ -245,6 +245,43 @@
       </div>
     </section>
 
+    <section class="video-menu py-4">
+      <div class="container">
+        <div class="row p-3">
+          <iframe id="videoMenu" width="560" height="480" src="https://www.youtube.com/embed/INm8spQ81MU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="controls row row-cols-md-3 text-center g-3">
+          <div class="col">
+            <button class="vidBtn btn btn-outline-primary btn-lg active" data-src="https://www.youtube.com/embed/INm8spQ81MU">Juego de fuego</button>
+          </div>
+          <div class="col">
+            <button class="vidBtn btn btn-outline-primary btn-lg" data-src="https://www.youtube.com/embed/df9c9pZ2GhU">Zzz</button>
+          </div>
+          <div class="col">
+            <button class="vidBtn btn btn-outline-primary btn-lg" data-src="https://www.youtube.com/embed/mkmFRsqqvcU">Paciencia</button>
+          </div>
+          <div class="col">
+            <button class="vidBtn btn btn-outline-primary btn-lg" data-src="https://www.youtube.com/embed/aGphQndzrH4">Como si nada</button>
+          </div>
+          <div class="col">
+            <button class="vidBtn btn btn-outline-primary btn-lg" data-src="https://www.youtube.com/embed/idw65e5OiGM">La Luna</button>
+          </div>
+          <div class="col">
+            <button class="vidBtn btn btn-outline-primary btn-lg" data-src="https://www.youtube.com/embed/8AZzJJn6CLU">A flor de piel</button>
+          </div>
+          <div class="col">
+            <button class="vidBtn btn btn-outline-primary btn-lg" data-src="https://www.youtube.com/embed/6aQdsoFNlVg">Wah</button>
+          </div>
+          <div class="col">
+            <button class="vidBtn btn btn-outline-primary btn-lg" data-src="https://www.youtube.com/embed/xYgvViO6DzM">Missed calls</button>
+          </div>
+          <div class="col">
+            <button class="vidBtn btn btn-outline-primary btn-lg" data-src="https://www.youtube.com/embed/HLIZZyCSUEc">Stay</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <footer class="site-footer">
       <div class="container">
         <div class="row text-center">
@@ -285,5 +322,7 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+
+    <script src="script.js"></script>
   </body>
 </html>
