The color of the buttons has changed

--- a/index.html
+++ b/index.html
@@ -197,6 +197,46 @@
       </div>
     </section>
 	-->
+
+
+  <section class="video-menu py-4">
+    <div class="container">
+      <div class="row p-3">
+        <iframe id="videoMenu" width="560" height="480" src="https://www.youtube.com/embed/INm8spQ81MU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <div class="controls row row-cols-md-3 text-center g-3">
+        <div class="col">
+          <button class="vidBtn btn btn-outline-secondary btn-lg active" data-src="https://www.youtube.com/embed/INm8spQ81MU">Juego de fuego</button>
+        </div>
+        <div class="col">
+          <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/df9c9pZ2GhU">Zzz</button>
+        </div>
+        <div class="col">
+          <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/mkmFRsqqvcU">Paciencia</button>
+        </div>
+        <div class="col">
+          <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/aGphQndzrH4">Como si nada</button>
+        </div>
+        <div class="col">
+          <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/idw65e5OiGM">La Luna</button>
+        </div>
+        <div class="col">
+          <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/8AZzJJn6CLU">A flor de piel</button>
+        </div>
+        <div class="col">
+          <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/6aQdsoFNlVg">Wah</button>
+        </div>
+        <div class="col">
+          <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/xYgvViO6DzM">Missed calls</button>
+        </div>
+        <div class="col">
+          <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/HLIZZyCSUEc">Stay</button>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
     <section id="concerts" class="py-4">
       <div class="container text-center">
         <h2>Coming Concerts</h2>
@@ -210,7 +250,7 @@
               />
               <h4 class="my-3">Madrid</h4>
               <p>TBA</p>
-              <button>Reserve</button>
+              <button class="btn btn-secondary">Reserve</button>
             </div>
           </div>
           <div class="col-md-4">
@@ -223,7 +263,7 @@
               <h4 class="my-3">Barcelona</h4>
               <h6>Supporting <b>Lori Meyers</b></h2>
               <p>04. Febrero 2022</p>
-              <button class="btn btn-success" onclick=" window.open('https://www.guitarbcn.com/es/c-3697/LORI-MEYERS','_blank')">Tickets</button>
+              <button class="btn btn-secondary" onclick=" window.open('https://www.guitarbcn.com/es/c-3697/LORI-MEYERS','_blank')">Tickets</button>
             </div>
           </div>
           <div class="col-md-4">
@@ -235,50 +275,13 @@
               />
               <h4 class="my-3">Barcelona 2</h4>
               <p>TBA</p>
-              <button>Reserve</button>
+              <button class="btn btn-secondary">Reserve</button>
             </div>
           </div>
         </div>
       </div>
       <div class="container text-center">
       	<p> Booking: <a href="mailto:carlos.marino@spanishbombs.com">Carlos Marino</a> <p>
-      </div>
-    </section>
-
-    <section class="video-menu py-4">
-      <div class="container">
-        <div class="row p-3">
-          <iframe id="videoMenu" width="560" height="480" src="https://www.youtube.com/embed/INm8spQ81MU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
-        <div class="controls row row-cols-md-3 text-center g-3">
-          <div class="col">
-            <button class="vidBtn btn btn-outline-primary btn-lg active" data-src="https://www.youtube.com/embed/INm8spQ81MU">Juego de fuego</button>
-          </div>
-          <div class="col">
-            <button class="vidBtn btn btn-outline-primary btn-lg" data-src="https://www.youtube.com/embed/df9c9pZ2GhU">Zzz</button>
-          </div>
-          <div class="col">
-            <button class="vidBtn btn btn-outline-primary btn-lg" data-src="https://www.youtube.com/embed/mkmFRsqqvcU">Paciencia</button>
-          </div>
-          <div class="col">
-            <button class="vidBtn btn btn-outline-primary btn-lg" data-src="https://www.youtube.com/embed/aGphQndzrH4">Como si nada</button>
-          </div>
-          <div class="col">
-            <button class="vidBtn btn btn-outline-primary btn-lg" data-src="https://www.youtube.com/embed/idw65e5OiGM">La Luna</button>
-          </div>
-          <div class="col">
-            <button class="vidBtn btn btn-outline-primary btn-lg" data-src="https://www.youtube.com/embed/8AZzJJn6CLU">A flor de piel</button>
-          </div>
-          <div class="col">
-            <button class="vidBtn btn btn-outline-primary btn-lg" data-src="https://www.youtube.com/embed/6aQdsoFNlVg">Wah</button>
-          </div>
-          <div class="col">
-            <button class="vidBtn btn btn-outline-primary btn-lg" data-src="https://www.youtube.com/embed/xYgvViO6DzM">Missed calls</button>
-          </div>
-          <div class="col">
-            <button class="vidBtn btn btn-outline-primary btn-lg" data-src="https://www.youtube.com/embed/HLIZZyCSUEc">Stay</button>
-          </div>
-        </div>
       </div>
     </section>
 
