--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Crow's Tale presents</title>
+    <title>kora.st</title>
     <link rel="icon" href="assets/crows-tale-logo.ico">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -96,13 +96,13 @@
             <h3>About Kora</h3>
             <p> 
             	Kora is one of the most unpredictable and uncategorizable jewels of the new Spanish alternative sound. The 19-year-old Catalan artist reinvents her sound in each song, incorporating elements of jazz, bossa nova, blues, electronica or the most brilliant pop. She controls the entire creative process: composes, arranges, plays, sings, records, mixes, produces and masters.<br>
-				<br>
-				Her anthem "Paciencia", from 01-EP (2019), has continued to catch on with increasingly diverse and numerous audiences, including those in Latin America, and is close to reach 4 million plays on Spotify.<br>
-				<br>
-				After releasing 3 singles in 2020 her second EP, "Renacer Pt. 1" (Spanish Bombs) was released in January 2021. Here, we find impecable songs like "Marte", "La Luna" or "+D24". This release won the respect of other national artists like C. Tangana and Alizzz. She also became part of the the 2021 "graduation" of the Radio3 show morning show Hoy Empieza Todo with Angel Carmona.<br>
-				<br>
-				"NEQP", "Como Si Nada" and "Elixir :: Bajo Cielo" are some of the latest releases in her discography and are perfect examples of the wide ranges of her music. NEQP is and electronic anthem of uptempo forms that takes us to a dark context with subtlety. "Como Si Nada" is a moderately slow song with a happy melody and catchy lyrics. Elixir and Bajo Cielo are two juxtaposed songs - happy and sad - that together create a beatiful atmosphere in your ears.<br>
-			</p>
+    				<br>
+              Her anthem "Paciencia", from 01-EP (2019), has continued to catch on with increasingly diverse and numerous audiences, including those in Latin America, and is close to reach 4 million plays on Spotify.<br>
+    				<br>
+    				  After releasing 3 singles in 2020 her second EP, "Renacer Pt. 1" (Spanish Bombs) was released in January 2021. Here, we find impecable songs like "Marte", "La Luna" or "+D24". This release won the respect of other national artists like C. Tangana and Alizzz. She also became part of the the 2021 "graduation" of the Radio3 show morning show Hoy Empieza Todo with Angel Carmona.<br>
+    				<br>
+    				  "NEQP", "Como Si Nada" and "Elixir :: Bajo Cielo" are some of the latest releases in her discography and are perfect examples of the wide ranges of her music. NEQP is and electronic anthem of uptempo forms that takes us to a dark context with subtlety. "Como Si Nada" is a moderately slow song with a happy melody and catchy lyrics. Elixir and Bajo Cielo are two juxtaposed songs - happy and sad - that together create a beatiful atmosphere in your ears.<br>
+    			</p>
             <!--<p>
             	Since her first releases in 2019 she has been gaining a large online audience. 
               Kora es una de las joyas más impredecibles e incatalogables del nuevo sonido alternativo español. La artista catalana de 19 años reinventa su sonido en cada canción incorporando elementos del jazz, la bossa nova, el blues, la electrónica o el pop más brillante. Ella controla todo el proceso creativo: compone, arregla, toca, canta, graba, mezcla, produce y masteriza.<br>
@@ -202,36 +202,40 @@
   <section class="video-menu py-4">
     <div class="container">
       <div class="row p-3">
-        <iframe id="videoMenu" width="560" height="480" src="https://www.youtube.com/embed/INm8spQ81MU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe id="videoMenu" width="560" height="480" src="https://www.youtube.com/embed/Iuh1IJUmJ5g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="controls row row-cols-md-3 text-center g-3">
         <div class="col">
-          <button class="vidBtn btn btn-outline-secondary btn-lg active" data-src="https://www.youtube.com/embed/INm8spQ81MU">Juego de fuego</button>
-        </div>
-        <div class="col">
-          <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/df9c9pZ2GhU">Zzz</button>
-        </div>
-        <div class="col">
-          <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/mkmFRsqqvcU">Paciencia</button>
+          <button class="vidBtn btn btn-outline-secondary btn-lg active" data-src="https://www.youtube.com/embed/Iuh1IJUmJ5g">elixir :: bajo cielo</button>
         </div>
         <div class="col">
           <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/aGphQndzrH4">Como si nada</button>
         </div>
         <div class="col">
+          <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/9kYFi2rWsB0">NEQP</button>
+        </div>
+        <div class="col">
+          <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/df9c9pZ2GhU">Zzz</button>
+        </div>
+        <div class="col">
           <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/idw65e5OiGM">La Luna</button>
         </div>
         <div class="col">
-          <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/8AZzJJn6CLU">A flor de piel</button>
+          <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/mkmFRsqqvcU">Paciencia</button>
         </div>
         <div class="col">
-          <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/6aQdsoFNlVg">Wah</button>
+          <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/8Kb8E_qbBQY">Vuelo</button>
         </div>
         <div class="col">
-          <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/xYgvViO6DzM">Missed calls</button>
+          <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/J0iNGFl_Bpg">Ya no quiero que me busques</button>
         </div>
+         <div class="col">
+          <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/surZkoR-nU8">Marte</button>
+        </div>
+        <!---
         <div class="col">
-          <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/HLIZZyCSUEc">Stay</button>
-        </div>
+          <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/"></button>
+        </div> -->
       </div>
     </div>
   </section>
@@ -281,7 +285,7 @@
         </div>
       </div>
       <div class="container text-center">
-      	<p> Booking: <a href="mailto:carlos.marino@spanishbombs.com">Carlos Marino</a> <p>
+      	<p> Booking: <a href="mailto:carlos.marino@spanishbombs.com">Carlos Mariño</a> <p>
       </div>
     </section>
 
@@ -294,7 +298,7 @@
           <div
             class="col-md-4 d-flex justify-content-center align-items-center"
           >
-            <span class="my-3">© 2021 Copyright Kora <br> <span style="font-size:85%;"><a href="crows.html"> by Crow's Tale designs</a></span></span>
+            <span class="my-3">© 2021 Copyright Kora <br> <span style="font-size:85%;"><!--<a href="crows.html">--> by Crow's Tale designs<!--</a>--></span></span>
           </div>
           <div class="col-md-4">
             <ul class="social-media">
