--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       </div>
       </section>
     
-    <section id="music" class="py-4 text-light" style="background: black;">
+    <section id="music" class="py-4 text-light" style="background: #740010;">
       <div class="container text-center">
           <h2> Streaming Services </h2>
           <ul class="social-media">
@@ -267,7 +267,7 @@
               <h4 class="my-3">Barcelona</h4>
               <h6>Supporting <b>Lori Meyers</b></h2>
               <p>04. Febrero 2022</p>
-              <button class="btn btn-secondary" onclick=" window.open('https://www.guitarbcn.com/es/c-3697/LORI-MEYERS','_blank')">Tickets</button>
+              <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.guitarbcn.com/es/c-3697/LORI-MEYERS','_blank')">Tickets</button>
             </div>
           </div>
           <div class="col-md-4">
