Buttons and navbar color changed

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       This is bootstrap color. Check this link
       https://getbootstrap.com/docs/5.0/utilities/background/#background-color
      -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark bg-dark text-white fixed-top"> 
+    <nav class="navbar navbar-expand-lg navbar-dark text-white fixed-top"> 
       <div class="container-fluid">
         <button
           class="navbar-toggler"
@@ -206,35 +206,35 @@
       </div>
       <div class="controls row row-cols-md-3 text-center g-3">
         <div class="col">
-          <button class="vidBtn btn btn-outline-secondary btn-lg active" data-src="https://www.youtube.com/embed/Iuh1IJUmJ5g">elixir :: bajo cielo</button>
+          <button class="vidBtn btn btn-lg active" data-src="https://www.youtube.com/embed/Iuh1IJUmJ5g">elixir :: bajo cielo</button>
         </div>
         <div class="col">
-          <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/aGphQndzrH4">Como si nada</button>
+          <button class="vidBtn btn btn-lg" data-src="https://www.youtube.com/embed/aGphQndzrH4">Como si nada</button>
         </div>
         <div class="col">
-          <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/9kYFi2rWsB0">NEQP</button>
+          <button class="vidBtn btn btn-lg" data-src="https://www.youtube.com/embed/9kYFi2rWsB0">NEQP</button>
         </div>
         <div class="col">
-          <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/df9c9pZ2GhU">Zzz</button>
+          <button class="vidBtn btn btn-lg" data-src="https://www.youtube.com/embed/df9c9pZ2GhU">Zzz</button>
         </div>
         <div class="col">
-          <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/idw65e5OiGM">La Luna</button>
+          <button class="vidBtn btn btn-lg" data-src="https://www.youtube.com/embed/idw65e5OiGM">La Luna</button>
         </div>
         <div class="col">
-          <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/mkmFRsqqvcU">Paciencia</button>
+          <button class="vidBtn btn btn-lg" data-src="https://www.youtube.com/embed/mkmFRsqqvcU">Paciencia</button>
         </div>
         <div class="col">
-          <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/8Kb8E_qbBQY">Vuelo</button>
+          <button class="vidBtn btn btn-lg" data-src="https://www.youtube.com/embed/8Kb8E_qbBQY">Vuelo</button>
         </div>
         <div class="col">
-          <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/J0iNGFl_Bpg">Ya no quiero que me busques</button>
+          <button class="vidBtn btn btn-lg" data-src="https://www.youtube.com/embed/J0iNGFl_Bpg">Ya no quiero que me busques</button>
         </div>
          <div class="col">
-          <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/surZkoR-nU8">Marte</button>
+          <button class="vidBtn btn btn-lg" data-src="https://www.youtube.com/embed/surZkoR-nU8">Marte</button>
         </div>
         <!---
         <div class="col">
-          <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/"></button>
+          <button class="vidBtn btn btn-lg" data-src="https://www.youtube.com/embed/"></button>
         </div> -->
       </div>
     </div>
