Fixed white space

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
          />
    </head>
    <body>
-      <header id="header" class="py-3 d-flex flex-column align-items-center justify-content-between">
+      <header id="header" class="hero py-3 d-flex flex-column align-items-center justify-content-between">
          <nav class="w-100 text-center navbar navbar-expand-lg navbar-dark text-white fs-3">
             <div class="container-fluid">
                <button
