--- a/index.html
+++ b/index.html
@@ -213,8 +213,22 @@
                         <h4 class="my-3">Barcelona</h4>
                         <h6>
                         Supporting <b>Lori Meyers</b></h2>
-                        <p>04. Febrero 2022</p>
+                        <p>4 Febrero 2022</p>
                         <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.guitarbcn.com/es/c-3697/LORI-MEYERS','_blank')">Tickets</button>
+                     </div>
+                     <div class="merch-card text-light">
+                        <h4 class="my-3">Playa de la Concha, Vilagarcia de Arousa</h4>
+                        <h6>
+                        <h2><b>Atlantic Fest</b></h2>
+                        <p>15 16 & 17 Julio 2022</p>
+                        <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.dodmagazine.es/festivales/atlantic-fest/','_blank')">Tickets</button>
+                     </div>
+                     <div class="merch-card text-light">
+                        <h4 class="my-3">Març, L'Hospitalet</h4>
+                        <h6>
+                        <h2><b> LETS Festival Edició XVII</b></h2>
+                        <p>18 March 2022</p>
+                        <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.letsfestival.cat/ca/programacio/c/53-kora-bernarda.html','_blank')">Tickets</button>
                      </div>
                   </div>
                </div>
