--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                      </div>
                      <div class="merch-card text-light">
                         <h6 class="my-3">Març, L'Hospitalet</h6>
-                        <h3><b> LETS Festival Edició XVII</b></h3>
+                        <h3><b> LETS</b> Festival</h3>
                         <p>18 March 2022</p>
                         <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.letsfestival.cat/ca/programacio/c/53-kora-bernarda.html','_blank')">Tickets</button>
                      </div>
