color  and dates

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
          </nav>
          <div class="text-center">
             <p class="fw-bold text-white">:: Fuera de lugar ::</p>
-            <small class="fst-italic">2022</small>
+            <small class="fst-italic">11 · 03 · 22</small>
          </div>
       </header>
       <main id="main">
@@ -171,31 +171,31 @@
                </div>
                <div class="controls row row-cols-md-3 text-center g-3">
                   <div class="col">
-                     <button class="vidBtn btn btn-lg active" data-src="https://www.youtube.com/embed/Iuh1IJUmJ5g">elixir :: bajo cielo</button>
+                     <button class="vidBtn btn btn-outline-secondary btn-lg active" data-src="https://www.youtube.com/embed/Iuh1IJUmJ5g">elixir :: bajo cielo</button>
                   </div>
                   <div class="col">
-                     <button class="vidBtn btn btn-lg" data-src="https://www.youtube.com/embed/aGphQndzrH4">Como si nada</button>
+                     <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/aGphQndzrH4">Como si nada</button>
                   </div>
                   <div class="col">
-                     <button class="vidBtn btn btn-lg" data-src="https://www.youtube.com/embed/9kYFi2rWsB0">NEQP</button>
+                     <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/9kYFi2rWsB0">NEQP</button>
                   </div>
                   <div class="col">
-                     <button class="vidBtn btn btn-lg" data-src="https://www.youtube.com/embed/df9c9pZ2GhU">Zzz</button>
+                     <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/df9c9pZ2GhU">Zzz</button>
                   </div>
                   <div class="col">
-                     <button class="vidBtn btn btn-lg" data-src="https://www.youtube.com/embed/idw65e5OiGM">La Luna</button>
+                     <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/idw65e5OiGM">La Luna</button>
                   </div>
                   <div class="col">
-                     <button class="vidBtn btn btn-lg" data-src="https://www.youtube.com/embed/mkmFRsqqvcU">Paciencia</button>
+                     <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/mkmFRsqqvcU">Paciencia</button>
                   </div>
                   <div class="col">
-                     <button class="vidBtn btn btn-lg" data-src="https://www.youtube.com/embed/8Kb8E_qbBQY">Vuelo</button>
+                     <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/8Kb8E_qbBQY">Vuelo</button>
                   </div>
                   <div class="col">
-                     <button class="vidBtn btn btn-lg" data-src="https://www.youtube.com/embed/J0iNGFl_Bpg">Ya no quiero que me busques</button>
+                     <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/J0iNGFl_Bpg">Ya no quiero que me busques</button>
                   </div>
                   <div class="col">
-                     <button class="vidBtn btn btn-lg" data-src="https://www.youtube.com/embed/surZkoR-nU8">Marte</button>
+                     <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/surZkoR-nU8">Marte</button>
                   </div>
                   <!---
                      <div class="col">
