fixed little things

--- a/index.html
+++ b/index.html
@@ -216,16 +216,16 @@
                         <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.guitarbcn.com/es/c-3697/LORI-MEYERS','_blank')">Tickets</button>
                      </div>
                      <div class="merch-card text-light">
-                        <h6 class="my-3">Playa de la Concha, Vilagarcia de Arousa</h6>
-                        <h3><b>Atlantic Fest</b></h3>
-                        <p>15 16 & 17 Julio 2022</p>
-                        <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.dodmagazine.es/festivales/atlantic-fest/','_blank')">Tickets</button>
-                     </div>
-                     <div class="merch-card text-light">
                         <h6 class="my-3">Març, L'Hospitalet</h6>
                         <h3><b> LETS</b> Festival</h3>
                         <p>18 March 2022</p>
                         <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.letsfestival.cat/es/programacion/c/53-kora-bernarda.html','_blank')">Tickets</button>
+                     </div>
+                     <div class="merch-card text-light">
+                        <h6 class="my-3">Playa de la Concha, Vilagarcia de Arousa</h6>
+                        <h3><b>Atlantic Fest</b></h3>
+                        <p>15 16 & 17 Julio 2022</p>
+                        <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.atlanticfest.com','_blank')">Tickets</button>
                      </div>
                   </div>
                </div>
@@ -240,7 +240,7 @@
          <div class="container">
             <div class="row text-center">
                <div class="col-md-4">
-                  <img src="assets/logo.png" alt="logo" />
+                  <img style="max-width: 64px; max-height: 64px" src="assets/smiley-transparent.png" alt="logo" />
                </div>
                <div
                   class="col-md-4 d-flex justify-content-center align-items-center"
