--- a/index.html
+++ b/index.html
@@ -211,32 +211,32 @@
                   <div class="col-md-4">
                      <div class="merch-card text-light">
                         <h4 class="my-3">Barcelona</h4>
-                        <h6>Supporting <b>Lori Meyers</b></h6>
+                        <h5>Supporting <b>Lori Meyers</b></h5>
                         <p>4 Febrero 2022</p>
                         <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.guitarbcn.com/es/c-3697/LORI-MEYERS','_blank')">Tickets</button>
                      </div>
                      <div class="merch-card text-light">
                         <h4 class="my-3">L'Hospitalet</h4>
-                        <h3><b>LETS</b> Festival</h3>
+                        <h4><b>LETS</b> Festival</h4>
                         <p>18 March 2022</p>
                         <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.letsfestival.cat/es/programacion/c/53-kora-bernarda.html','_blank')">Tickets</button>
                      </div>
                      <div class="merch-card text-light">
                         <h4 class="my-3">Madrid</h4>
-                        <h3><b>San Isidro</b></h3>
-                        <h6>El Sol</h6>
+                        <h4><b>Sound Isidro</b></h4>
+                        <h6>Sala El Sol</h6>
                         <p>14 May 2022</p>
                         <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.wegow.com/es-es/conciertos/kora-en-sound-isidro-2022','_blank')">Tickets</button>
                      </div>
                      <div class="merch-card text-light">
                         <h4 class="my-3">Sabadell</h4>
-                        <h3><b>Amfiteatre Parc Catalunya</b></h3>
+                        <h4>Amfiteatre Parc Catalunya</h4>
                         <p>20-21 May 2022</p>
                         <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.embassat.com/','_blank')">Tickets</button>
                      </div>
                      <div class="merch-card text-light">
                         <h4 class="my-3">Playa de la Concha<br> Vilagarcia de Arousa</h4>
-                        <h3><b>Atlantic Fest</b></h3>
+                        <h4><b>Atlantic Fest</b></h4>
                         <p>15 16 & 17 Julio 2022</p>
                         <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.atlanticfest.com','_blank')">Tickets</button>
                      </div>
