--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                      <div class="merch-card text-light">
                         <h4 class="my-3">Barcelona</h4>
                         <h5>Supporting <b>Lori Meyers</b></h5>
-                        <p>4 Febrero 2022</p>
+                        <p>19 Febrero 2022</p>
                         <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.guitarbcn.com/es/c-3697/LORI-MEYERS','_blank')">Tickets</button>
                      </div>
                      <div class="merch-card text-light">
@@ -230,7 +230,7 @@
                      </div>
                      <div class="merch-card text-light">
                         <h4 class="my-3">Sabadell</h4>
-                        <h4>Amfiteatre Parc Catalunya</h4>
+                        <h4>Embassat't Festival</h4>
                         <p>20-21 May 2022</p>
                         <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.embassat.com/','_blank')">Tickets</button>
                      </div>
